enhance code style