@@ -27,6 +27,7 @@
 package org.laladev.moneyjinn.service.impl;
 
 import java.util.List;
+import java.util.function.Consumer;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
@@ -69,18 +70,21 @@ public class GroupService extends AbstractService implements IGroupService {
 	@Override
 	public ValidationResult validateGroup(final Group group) {
 		Assert.notNull(group, GROUP_MUST_NOT_BE_NULL);
+
 		final ValidationResult validationResult = new ValidationResult();
-		if (group.getName() == null || group.getName().trim().isEmpty()) {
-			validationResult
-					.addValidationResultItem(new ValidationResultItem(group.getId(), ErrorCode.NAME_MUST_NOT_BE_EMPTY));
+		final Consumer<ErrorCode> addResult = (final ErrorCode errorCode) -> validationResult.addValidationResultItem(
+				new ValidationResultItem(group.getId(), errorCode));
+
+		if (group.getName() == null || group.getName().isBlank()) {
+			addResult.accept(ErrorCode.NAME_MUST_NOT_BE_EMPTY);
 		} else {
 			final Group checkGroup = this.getGroupByName(group.getName());
 			// Update OR Create
 			if (checkGroup != null && (group.getId() == null || !checkGroup.getId().equals(group.getId()))) {
-				validationResult.addValidationResultItem(
-						new ValidationResultItem(group.getId(), ErrorCode.GROUP_WITH_SAME_NAME_ALREADY_EXISTS));
+				addResult.accept(ErrorCode.GROUP_WITH_SAME_NAME_ALREADY_EXISTS);
 			}
 		}
+
 		return validationResult;
 	}
 
